Bug 400317 - [Wayland] "Keep open" feature is not working with applets in the system tray
Summary: [Wayland] "Keep open" feature is not working with applets in the system tray
Status: VERIFIED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.20.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 424590 425277 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-26 02:44 UTC by Patrick Silva
Modified: 2021-08-23 14:02 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.82
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-10-26 02:44:45 UTC
STEPS TO REPRODUCE
1. start Wayland session, click some applet in the system tray (a popup shows up)
2. click the icon in the upper right corner to keep the popup always on top
3. open any window and maximize it

OBSERVED RESULT
the maximized window hides the applet popup

EXPECTED RESULT
applet popup should remain in foreground

KDE neon Developer Edition
KDE Plasma: 5.14.80
Qt: 5.11.2
KDE Frameworks: 5.52.0
Comment 1 Alexander Mentyu 2018-10-30 11:45:43 UTC
Can reproduce

Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
Qt Version: 5.11.2
KDE Frameworks Version: 5.52.0
Comment 2 David Edmundson 2019-01-18 19:45:25 UTC
There's just completely no implementation for it.

Can't be fixed in 5.15. I've made a start for 5.16
Comment 3 Patrick Silva 2020-07-24 12:17:38 UTC
*** Bug 424590 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2020-08-13 01:01:36 UTC
*** Bug 425277 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2021-04-22 17:30:51 UTC
Fixed by Kevin Ottens with https://invent.kde.org/frameworks/plasma-framework/-/commit/799121e70badd73379b539af1259ed10527da280 in Frameworks 5.82!
Comment 6 Nate Graham 2021-04-23 20:09:00 UTC
Verified, hooray!